test/corpus/imports.txt
================================================================================
Simple import
================================================================================

use foo

--------------------------------------------------------------------------------

(source_file
  (import
    (module)))

================================================================================
Subfolder import
================================================================================

use foo
use foo/bar

--------------------------------------------------------------------------------

(source_file
  (import
    (module))
  (import
    (module)))

================================================================================
Single unqualified import
================================================================================

use foo/bar.{buzz}

--------------------------------------------------------------------------------

(source_file
  (import
    (module)
    (unqualified_imports
      (unqualified_import
        (identifier)))))

================================================================================
Multiple unqualified import
================================================================================

use foo/bar.{buzz, Fizz}

--------------------------------------------------------------------------------

(source_file
  (import
    (module)
    (unqualified_imports
      (unqualified_import
        (identifier))
      (unqualified_import
        (type_identifier)))))


================================================================================
Import alias
================================================================================

use foo/bar as foo
use foo/bar.{buzz as fizz}
use foo/bar.{Buzz as Fizz} as bar

--------------------------------------------------------------------------------

(source_file
  (import
    (module)
    (identifier))
  (import
    (module)
    (unqualified_imports
      (unqualified_import
        (identifier)
        (identifier))))
  (import
    (module)
    (unqualified_imports
      (unqualified_import
        (type_identifier)
        (type_identifier)))
    (identifier)))

================================================================================
Module import alias
================================================================================

use foo/bar as foo

--------------------------------------------------------------------------------

(source_file
  (import
    (module)
    (identifier)))

================================================================================
Unqualified import alias
================================================================================

use foo/bar.{buzz as fizz}

--------------------------------------------------------------------------------

(source_file
  (import
    (module)
    (unqualified_imports
      (unqualified_import
        (identifier)
        (identifier)))))

================================================================================
Unqualified import alias
================================================================================

use foo/bar.{Buzz as Fizz} as bar

--------------------------------------------------------------------------------

(source_file
  (import
    (module)
    (unqualified_imports
      (unqualified_import
        (type_identifier)
        (type_identifier)))
    (identifier)))
